# LLM_Evaluation_Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  experiment.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: llm-evaluation.yml  test.yml
app/: comparison.py  config.py  constants.py  dataset_loader.py  evaluation_runner.py  evaluators_legacy.py  exceptions.py  judge.py  llm_client.py  logging_config.py  metrics.py  pricing.py  prompt_manager.py  quality_gate.py  report_generator.py  schemas.py  security.py
app/datasets/: __init__.py  generator.py  loader.py  validator.py
app/evaluators/: __init__.py  base.py  behavior.py  keyword.py  llm_judge.py  registry.py  safety.py  semantic_similarity.py
app/experiments/: __init__.py  comparison.py  matrix_runner.py  quality_gate.py  runner.py  summaries.py
app/prompts/: __init__.py  loader.py  versioning.py
app/providers/: __init__.py  anthropic_provider.py  base.py  (+4 more)
dashboard/: charts.py  helpers.py  state.py  streamlit_app.py
data/: golden_dataset.json  sample_dataset.json
prompts/: baseline_prompt.txt  candidate_prompt.txt  judge_prompt.txt
sample_reports/: README.md
scripts/: run_evaluation.py  run_matrix.py  show_latest_report.py  validate_project.py
tests/: conftest.py  test_cli.py  test_comparison_quality.py  test_dashboard_and_storage.py  test_dataset_csv_prompt_matrix.py  test_dataset_loader.py  test_evaluation_runner.py  test_evaluators.py  test_judge.py  test_metrics.py  test_providers.py  test_report_generator.py
(+20 files in other folders)
